// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppBar > should correctly render an AppBar with a MenuItem when the file property is provided > expected html 1`] = `
<div>
  <div
    class="bg-slate-700"
  >
    <div
      class="align-center container mx-auto flex flex-wrap justify-between"
    >
      <div
        class="align-center flex"
      >
        <span
          class="my-auto py-2 text-white sm:text-2xl"
          id="app-bar-title-label"
        >
          gcweb:app.title
        </span>
      </div>
      <div
        class="flex items-center space-x-4 text-right"
      />
    </div>
  </div>
</div>
`;

exports[`AppBar > should correctly render an AppBar with a MenuItem when the to property is provided > expected html 1`] = `
<div>
  <div
    class="bg-slate-700"
  >
    <div
      class="align-center container mx-auto flex flex-wrap justify-between"
    >
      <div
        class="align-center flex"
      >
        <span
          class="my-auto py-2 text-white sm:text-2xl"
          id="app-bar-title-label"
        >
          gcweb:app.title
        </span>
      </div>
      <div
        class="flex items-center space-x-4 text-right"
      />
    </div>
  </div>
</div>
`;

exports[`AppBar > should render render an AppBar with a name provided > expected html 1`] = `
<div>
  <div
    class="bg-slate-700"
  >
    <div
      class="align-center container mx-auto flex flex-wrap justify-between"
    >
      <div
        class="align-center flex"
      >
        <span
          class="my-auto py-2 text-white sm:text-2xl"
          id="app-bar-title-label"
        >
          gcweb:app.title
        </span>
      </div>
      <div
        class="flex items-center space-x-4 text-right"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="flex h-full flex-nowrap space-x-2 bg-slate-600 px-2 text-sm text-white hover:bg-slate-500 hover:underline focus:ring-2 focus:ring-black focus:ring-offset-2 focus:outline-hidden aria-expanded:bg-slate-800 aria-expanded:text-white sm:space-x-4 sm:px-4"
          data-state="closed"
          id="radix-«r0»"
          type="button"
        >
          <span
            class="text-md my-auto flex flex-nowrap items-center space-x-2 py-2"
          >
            <span
              class="flex h-8 w-8 items-center justify-center rounded-full bg-white"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-user size-5 text-slate-700"
                data-icon="user"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="text-md hidden py-2 font-bold sm:block"
              id="app-bar-menu-label"
            >
              Test User
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down my-auto size-4"
            data-icon="chevron-down"
            data-prefix="fas"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar > should render render an AppBar with a profile item provided > expected html 1`] = `
<div>
  <div
    class="bg-slate-700"
  >
    <div
      class="align-center container mx-auto flex flex-wrap justify-between"
    >
      <div
        class="align-center flex"
      >
        <span
          class="my-auto py-2 text-white sm:text-2xl"
          id="app-bar-title-label"
        >
          gcweb:app.title
        </span>
      </div>
      <div
        class="flex items-center space-x-4 text-right"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="flex h-full flex-nowrap space-x-2 bg-slate-600 px-2 text-sm text-white hover:bg-slate-500 hover:underline focus:ring-2 focus:ring-black focus:ring-offset-2 focus:outline-hidden aria-expanded:bg-slate-800 aria-expanded:text-white sm:space-x-4 sm:px-4"
          data-state="closed"
          id="radix-«r2»"
          type="button"
        >
          <span
            class="text-md my-auto flex flex-nowrap items-center space-x-2 py-2"
          >
            <span
              class="flex h-8 w-8 items-center justify-center rounded-full bg-white"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-user size-5 text-slate-700"
                data-icon="user"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="text-md hidden py-2 font-bold sm:block"
              id="app-bar-menu-label"
            >
              Test User
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-chevron-down my-auto size-4"
            data-icon="chevron-down"
            data-prefix="fas"
            role="img"
            viewBox="0 0 448 512"
          >
            <path
              d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
